--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
         background-color: #ff3399;
     }
 
-    /* Ảnh xuất hiện dưới nút */
     .surprise-image {
         display: none;
         flex-direction: column;
@@ -102,7 +101,6 @@
         font-weight: bold;
     }
 
-    /* Trái tim bay */
     .heart {
         position: fixed;
         bottom: 0;
@@ -130,10 +128,10 @@
 <p class="center-text">NHỮNG THỨ VỀ TRÂM ANH</p>
 
 <div class="image-row">
-    <img src="tramanh.jpg" alt="Trâm Anh">
-    <img src="tramanh2.jpg" alt="Trâm Anh 2">
-    <img src="tramanh1.jpg" alt="Trâm Anh 1">
-    <img src="tramanh3.jpg" alt="Trâm Anh 3">
+    <img src="images/tramanh.jpg" alt="Trâm Anh">
+    <img src="images/tramanh2.jpg" alt="Trâm Anh 2">
+    <img src="images/tramanh1.jpg" alt="Trâm Anh 1">
+    <img src="images/tramanh3.jpg" alt="Trâm Anh 3">
 </div>
 
 <h1 class="section-title">CÁC SỞ THÍCH</h1>
@@ -143,22 +141,19 @@
     <li>Thích uống nước đái</li>
 </ul>
 
-<!-- Nút bấm -->
 <button class="btn-change" id="changeBtn">Bấm để bất ngờ 💖</button>
 
-<!-- Ảnh xuất hiện dưới nút -->
 <div class="surprise-image" id="surpriseImage">
     <img id="autoImg" src="" alt="Bất ngờ">
-    <p id="imgCaption">CÓ CÁI LỒN</p>
+    <p id="imgCaption">CÓ CÁI LỒN!</p>
 </div>
 
 <script>
-    // Danh sách ảnh bất ngờ
     const imageSets = [
-        "anhdim.jpg",
-        "tramanh.jpg",
-        "tramanh1.jpg",
-        "tramanh2.jpg"
+        "images/anhdim.jpg",
+        "images/tramanh.jpg",
+        "images/tramanh1.jpg",
+        "images/tramanh2.jpg"
     ];
 
     let currentIndex = 0;
@@ -168,10 +163,9 @@
     const surpriseDiv = document.getElementById("surpriseImage");
     const autoImg = document.getElementById("autoImg");
 
-    // Tạo trái tim bay
     function createHeart() {
         const heart = document.createElement("img");
-        heart.src = "traitim.jpg"; 
+        heart.src = "images/traitim.jpg"; 
         heart.className = "heart";
         heart.style.left = Math.random() * window.innerWidth + "px";
         heart.style.width = (30 + Math.random() * 40) + "px";
@@ -184,14 +178,12 @@
         autoImg.src = imageSets[currentIndex];
 
         if(intervalId === null){
-            // Ảnh đầu tiên giữ 2 giây
             setTimeout(() => {
                 currentIndex++;
                 if(currentIndex < imageSets.length){
                     autoImg.src = imageSets[currentIndex];
                 }
 
-                // Sau đó chạy tiếp mỗi 1 giây, dừng khi hết ảnh
                 intervalId = setInterval(() => {
                     currentIndex++;
                     if(currentIndex < imageSets.length){
@@ -203,7 +195,6 @@
             }, 2000);
         }
 
-        // Tạo 6 trái tim bay
         for (let i = 0; i < 6; i++) {
             setTimeout(createHeart, i * 400);
         }
