--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         height: 350px;
         border-radius: 15px;
         box-shadow: 0 6px 15px rgba(0,0,0,0.25);
+        transition: opacity 0.5s;
     }
 
     .surprise-image p {
@@ -156,12 +157,21 @@
         "images/tramanh2.jpg"
     ];
 
+    // Giữ nguyên caption
+    const captions = [
+        "CÓ CÁI LỒN!", 
+        "CÓ CÁI LỒN!", 
+        "CÓ CÁI LỒN!", 
+        "CÓ CÁI LỒN!"
+    ];
+
     let currentIndex = 0;
     let intervalId = null;
 
     const changeBtn = document.getElementById("changeBtn");
     const surpriseDiv = document.getElementById("surpriseImage");
     const autoImg = document.getElementById("autoImg");
+    const imgCaption = document.getElementById("imgCaption");
 
     function createHeart() {
         const heart = document.createElement("img");
@@ -176,18 +186,21 @@
     changeBtn.addEventListener("click", () => {
         surpriseDiv.style.display = "flex"; 
         autoImg.src = imageSets[currentIndex];
+        imgCaption.innerText = captions[currentIndex];
 
         if(intervalId === null){
             setTimeout(() => {
                 currentIndex++;
                 if(currentIndex < imageSets.length){
                     autoImg.src = imageSets[currentIndex];
+                    imgCaption.innerText = captions[currentIndex];
                 }
 
                 intervalId = setInterval(() => {
                     currentIndex++;
                     if(currentIndex < imageSets.length){
                         autoImg.src = imageSets[currentIndex];
+                        imgCaption.innerText = captions[currentIndex];
                     } else {
                         clearInterval(intervalId);
                     }
